# live-speech-to-text-gcp

./: .env.example  ARCHITECTURE.md  README.md  main.py  pyproject.toml  transcribe_file.py  transcribe_live.py
backend/: database.py  meeting_state.py  meetings.db  server.py
backend/static/: audio-processor.js  index.html  meeting-client.js
test/: sample.txt
